src/style.css
* {
  font-family: inherit;
  line-height: inherit;
  color: inherit;
  margin: 0;
  box-sizing: border-box;
}

html {
  font-family: 'Avenir', Arial, sans-serif;
  font-size: 125%;
  height: 100%;
}

@media (max-width: 50em) {
  html {
    font-size: 100%;
  }
}

body {
  padding: 0;
  height: 100%;
}

/* wrapper */
body > div {
  height: 100%;
  max-width: 796px;
  position: relative;
}

@media screen and (min-width: 796px) {
  body {
    background-image: linear-gradient(-90deg, #992459, #ff5b0f);
  }

  body > div {
    height: 80vh;
    position: relative;
    top: 10vh;
    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.06), 0 2px 5px 0 rgba(0, 0, 0, 0.2);
    border-radius: 4px;
    margin: 0 auto;
    overflow: hidden;
  }
}

header {
  overflow: auto;
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
  top: 0;
  width: 100%;
  background-color: white;
  z-index: 5;
  position: absolute;
}

header img {
  height: 1.5rem;
  margin: 1rem auto;
  display: block;
}

div > ul {
  list-style: none;
  padding: 0.5em;
  padding-top: 4rem;
  padding-bottom: 4rem;
  background-image: url('/img/bg.png');
  width: 100%;
  height: 100%;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  display: flex;
  flex-direction: column;
}

li {
  padding: 1em;
  background-color: white;
  margin: 1em 0;
  max-width: 67%;
  box-shadow: 0 1px 0.5px rgba(0, 0, 0, 0.13);
  border-radius: 6px;
}

li:first-child {
  margin-top: auto;
}

[data-user=user] {
  align-self: flex-end;
  background-color: #dcf8c6;
}

li ul {
  list-style: none;
  padding: 0;
  padding-top: 0.5em;
}

li button {
  margin-top: 1rem;
  flex-grow: 1;
  border: 1px solid #efefef;
  border-radius: 4px;
  padding: 0.5em;
  background-color: white;
  font-size: inherit;
  color: #60b0e8;
  width: 100%;
}

li ul li {
  display: flex;
  max-width: 100%;
  padding: 0.5em;
  border: 1px solid #efefef;
}

li div {
  width: 70%;
  align-self: center;
  padding: 0.5em;
}

li div h2 {
  font-size: inherit;
}

li div h3 {
  font-size: inherit;
  font-weight: 100;
}

li img {
  width: 30%;
  height: 100%;
}

form {
  display: flex;
  align-items: center;
  font-size: 1rem;
  flex: none;
  position: absolute;
  width: 100%;
  bottom: 0;
  background-color: white;
}

form input {
  -webkit-appearance: none;
  appearance: none;
  margin: 0.5rem;
  flex-grow: 1;
  font-size: inherit;
  border: 1px solid #efefef;
  border-radius: 4px;
  padding: 0.5em;
}

form button {
  -webkit-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 0;
  color: #60b0e8;
  text-transform: uppercase;
  font-weight: 500;
  font-size: inherit;
  margin-right: 0.5em;
  cursor: pointer;
}

